--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,48 @@
 services:
+  ingest:
+    build: 
+      context : ./Data
+      dockerfile : Dockerfile
+    depends_on:
+      - client
+      - db
+      - api
+    restart: on-failure
+    
   api:
     build:
-      context: .
-      dockerfile: ./API/Dockerfile
+      context: ./API
+      dockerfile: Dockerfile
     image: georgi-api
     ports:
       - "80:80"
   client:
     build:
-      context: .
-      dockerfile: ./Client/Dockerfile
+      context: ./Client
+      dockerfile: Dockerfile
     image: georgi-react
     ports:
       - "3000:3000"
   db:
     image: "postgis/postgis"
     build:
-      context: .
-      dockerfile: pg-Dockerfile
+      context: ./Postgres
+      dockerfile: Dockerfile
     volumes:
       - ./Postgres-data:/var/lib/postgresql/data
     environment:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
-      - POSTGRES_PASS=Pass2020!
       - POSTGRES_PASSWORD=Pass2020!
       - ALLOW_IP_RANGE=0.0.0.0/0
-      - POSTGRES_MULTIPLE_EXTENSIONS=hstore,postgis,postgis_topology,postgis_raster,pgrouting
+      - POSTGRES_MULTIPLE_EXTENSIONS=postgis,postgis_topology,postgis_raster,pgrouting
     ports:
       - "5432:5432"
     restart: on-failure
     healthcheck:
       test: "exit 0"
+    
 
 volumes:
   Postgres-data:
+
